--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -5,6 +5,44 @@ readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/m
 helm_repository_url: https://prometheus-community.github.io/helm-charts
 chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
+- version: 81.0.0
+  kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
+    '1.25']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: "- No Helm values changes were called out in the provided release\
+      \ notes for this upgrade (80.14.4 \u2192 81.0.0).\n- Still review your existing\
+      \ values for any Prometheus Operator/CRD-related settings, since the operator\
+      \ version is bumped to **0.88.0** and may introduce behavioral changes not explicitly\
+      \ captured here."
+    chart_updates: [Bumped **Prometheus Operator** to **v0.88.0** (this is the primary
+        change in 81.0.0)., '80.14.4 contained only CI/dependency housekeeping (helm/helm
+        v4.0.5 and non-major dependency updates), no functional chart changes called
+        out.']
+    features: ['Prometheus Operator updated to v0.88.0, which may include new Operator
+        features/fixes inherited from that upstream release (not detailed in the provided
+        notes).']
+    breaking_changes: ['No explicit breaking changes were listed in the provided release
+        notes. Treat the Prometheus Operator bump as a potential source of breaking
+        behavior (especially around CRDs, defaulting/validation, and reconciliation
+        behavior) and validate in a staging cluster.']
+  chart_version: 81.0.0
+  images: ['docker.io/bats/bats:v1.4.1', 'docker.io/grafana/grafana:12.3.1', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.4',
+    'quay.io/kiwigrid/k8s-sidecar:2.2.1', 'quay.io/prometheus-operator/prometheus-operator:v0.88.0',
+    'quay.io/prometheus/alertmanager:v0.30.1', 'quay.io/prometheus/node-exporter:v1.10.2',
+    'quay.io/prometheus/prometheus:v3.9.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.17.0']
+- version: 80.14.4
+  kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
+    '1.25']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 80.14.4
+  images: ['docker.io/bats/bats:v1.4.1', 'docker.io/grafana/grafana:12.3.1', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.4',
+    'quay.io/kiwigrid/k8s-sidecar:2.2.1', 'quay.io/prometheus-operator/prometheus-operator:v0.87.1',
+    'quay.io/prometheus/alertmanager:v0.30.1', 'quay.io/prometheus/node-exporter:v1.10.2',
+    'quay.io/prometheus/prometheus:v3.9.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.17.0']
 - version: 80.10.0
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25']
