--- a/static/compatibilities/traefik.yaml
+++ b/static/compatibilities/traefik.yaml
@@ -3,25 +3,25 @@ git_url: https://github.com/traefik/traefik
 release_url: https://github.com/traefik/traefik/releases/tag/v{vsn}
 helm_repository_url: https://traefik.github.io/charts
 versions:
-- version: 3.6.5
+- version: 3.6.6
   kube: ['1.35', '1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['From v3.6.0 (baseline): added new ACME certificatesResolvers options;
-        added least-time and HighestRandomWeight load-balancing strategies; added
-        TCP (active) healthchecks and passive health checks; added Knative provider
-        and improvements to Kubernetes/Gateway API and Ingress publishing (including
-        ExternalName services); added multi-layer routing; added HTTP/2 HPACK table
-        size options; and several dashboard/UI tweaks.', v3.6.5 is a patch release
-        with no new features called out in the notes you provided; it focuses on fixes/behavior
-        clarifications.]
-    breaking_changes: ['Access logs will now also be printed for rejected requests;
-        the release note explicitly warns about this new behavior, so log volume/content
-        may change and could affect log-based alerts/costs.']
-  chart_version: 38.0.1
+    features: ['New ACME certificatesResolvers options were added, expanding how you
+        can configure certificate issuance/renewal.', 'Multiple new routing and load-balancing
+        capabilities landed (multi-layer routing, least-time and highest-random-weight
+        algorithms), plus new health check types (TCP and passive).', 'Kubernetes-related
+        enhancements include Knative provider support, Gateway API bumped to v1.4.0,
+        ExternalName service publishing for Ingress, and CRD weight improvements.',
+      Platform/provider improvements include ECS IPv6 support and the option to discover
+        non-running Docker containers., 'Operational/UI improvements include syscall
+        support for plugins, HTTP/2 HPACK table size tuning, and minor dashboard UI
+        tweaks.']
+    breaking_changes: []
+  chart_version: 38.0.2
   images: []
 - version: 3.6.0
   kube: ['1.35', '1.34', '1.33', '1.32']
